Working script for cervical cancer data.

--- a/preprocessing/unified_data_prep.ipynb
+++ b/preprocessing/unified_data_prep.ipynb
@@ -14,16 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compile_data_for_DESeq(gene_cols, healthy_dfs, tumor_dfs, healthy_level, tumor_level):\n",
+    "def compile_data_for_DESeq(gene_cols, healthy_dfs, healthy_srcs, tumor_dfs, tumor_srcs, healthy_level, tumor_level):\n",
     "    gene_col_df = healthy_dfs[0][gene_cols]\n",
     "    for i, hd in enumerate(healthy_dfs):\n",
     "        assert all(gene_col_df == hd[gene_cols]), f\"Row ordering (order of gene symbols) violated by healthy dataframe {i}\"\n",
     "    for i, td in enumerate(tumor_dfs):\n",
     "        assert all(gene_col_df == td[gene_cols]), f\"Row ordering (order of gene symbols) violated by tumor dataframe {i}\"\n",
+    "    \n",
+    "    healthy_sources = []\n",
+    "    tumor_sources = []\n",
+    "    \n",
+    "    for i, hd in enumerate(healthy_dfs):\n",
+    "        healthy_sources.extend(itertools.repeat(healthy_srcs[i], len(hd.columns) - len(gene_cols)))\n",
+    "    \n",
+    "    for i, td in enumerate(tumor_dfs):\n",
+    "        tumor_sources.extend(itertools.repeat(tumor_srcs[i], len(td.columns) - len(gene_cols)))\n",
+    "    \n",
     "    all_healthy_df = pd.concat(\n",
     "        (df.drop(gene_cols, axis=1) for df in healthy_dfs),\n",
     "        axis=1\n",
@@ -35,13 +45,13 @@
     "    )\n",
     "    \n",
     "    col_data_healthy_df = pd.DataFrame(\n",
-    "        data=zip(all_healthy_df, itertools.repeat(healthy_level, len(all_healthy_df.columns))),\n",
-    "        columns=[\"sample_name\", \"condition\"]\n",
+    "        data=zip(all_healthy_df.columns, itertools.repeat(healthy_level, len(all_healthy_df.columns)), healthy_sources),\n",
+    "        columns=[\"sample_name\", \"condition\", \"data_source\"]\n",
     "    )\n",
     "    \n",
     "    col_data_tumor_df = pd.DataFrame(\n",
-    "        data=zip(all_tumor_df, itertools.repeat(tumor_level, len(all_tumor_df.columns))),\n",
-    "        columns=[\"sample_name\", \"condition\"]\n",
+    "        data=zip(all_tumor_df.columns, itertools.repeat(tumor_level, len(all_tumor_df.columns)), tumor_sources),\n",
+    "        columns=[\"sample_name\", \"condition\", \"data_source\"]\n",
     "    )\n",
     "    \n",
     "    return pd.concat([gene_col_df, all_healthy_df, all_tumor_df], axis=1), pd.concat([col_data_healthy_df, col_data_tumor_df], axis=0, ignore_index=True)\n",
@@ -50,7 +60,23 @@
     "def save_for_DESeq(data_dir, healthy_files, tumor_files, dset_name, gene_cols, healthy_level, tumor_level):\n",
     "    healthy_dfs = [pd.read_csv(f\"{data_dir}/{fn}\", sep=\"\\t\", compression=\"gzip\") for fn in healthy_files]\n",
     "    tumor_dfs = [pd.read_csv(f\"{data_dir}/{fn}\", sep=\"\\t\", compression=\"gzip\") for fn in tumor_files]\n",
-    "    counts_df, coldata_df = compile_data_for_DESeq(gene_cols, healthy_dfs, tumor_dfs, healthy_level, tumor_level)\n",
+    "    \n",
+    "    healthy_srcs = []\n",
+    "    tumor_srcs = []\n",
+    "    \n",
+    "    for hf in healthy_files:\n",
+    "        if \"tcga\" in hf:\n",
+    "            healthy_srcs.append(\"TCGA\")\n",
+    "        elif \"gtex\" in hf:\n",
+    "            healthy_srcs.append(\"GTEx\")\n",
+    "    \n",
+    "    for tf in tumor_files:\n",
+    "        if \"tcga\" in tf:\n",
+    "            tumor_srcs.append(\"TCGA\")\n",
+    "        elif \"gtex\" in tf:\n",
+    "            tumor_srcs.append(\"GTEx\")\n",
+    "    \n",
+    "    counts_df, coldata_df = compile_data_for_DESeq(gene_cols, healthy_dfs, healthy_srcs, tumor_dfs, tumor_srcs, healthy_level, tumor_level)\n",
     "    \n",
     "    if not os.path.exists(f\"{data_dir}/{dset_name}\"):\n",
     "        os.makedirs(f\"{data_dir}/{dset_name}\")\n",
@@ -62,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,13 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "save_for_DESeq(data_dir, cvx_healthy, cvx_tumor, \"unified_cervical_data\", gene_cols, \"healthy\", \"tumor\")\n",
     "save_for_DESeq(data_dir, ut_healthy, ut_tumor, \"unified_uterine_data\", gene_cols, \"healthy\", \"tumor\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
