--- a/DGE_analysis/full_pipeline_pt1.ipynb
+++ b/DGE_analysis/full_pipeline_pt1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,10 +219,10 @@
     "}\n",
     "\n",
     "\n",
-    "# Select which rows to keep based on adjusted p-value and log2 fold-change\n",
+    "# Select which rows to keep based on adjusted p-value and absolute log2 fold-change\n",
     "filter_DGE_res <- function(df, max_padj = 0.05, min_l2fc = log2(2)) {\n",
-    "    padj_mask <- df$padj <= max_padj\n",
-    "    l2fc_mask <- df$log2FoldChange >= min_l2fc\n",
+    "    padj_mask <- df$padj < max_padj\n",
+    "    l2fc_mask <- abs(df$log2FoldChange) > min_l2fc\n",
     "    final_mask <- padj_mask & l2fc_mask\n",
     "    return(df[final_mask, ])\n",
     "}"
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -293,7 +293,7 @@
      "text": [
       "Downloading data for project TCGA-CESC\n",
       "GDCdownload will download 309 files. A total of 77.948874 MB\n",
-      "Downloading chunk 1 of 31 (10 files, size = 2.5169 MB) as Sun_Jul_19_15_47_34_2020_0.tar.gz\n"
+      "Downloading chunk 1 of 31 (10 files, size = 2.5169 MB) as Tue_Jul_21_11_54_02_2020_0.tar.gz\n"
      ]
     },
     {
@@ -307,7 +307,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 2 of 31 (10 files, size = 2.509254 MB) as Sun_Jul_19_15_47_34_2020_1.tar.gz\n"
+      "Downloading chunk 2 of 31 (10 files, size = 2.509254 MB) as Tue_Jul_21_11_54_02_2020_1.tar.gz\n"
      ]
     },
     {
@@ -321,7 +321,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 3 of 31 (10 files, size = 2.515677 MB) as Sun_Jul_19_15_47_34_2020_2.tar.gz\n"
+      "Downloading chunk 3 of 31 (10 files, size = 2.515677 MB) as Tue_Jul_21_11_54_02_2020_2.tar.gz\n"
      ]
     },
     {
@@ -335,77 +335,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 4 of 31 (10 files, size = 2.518157 MB) as Sun_Jul_19_15_47_34_2020_3.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 2.5 MB       "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading chunk 5 of 31 (10 files, size = 2.511126 MB) as Sun_Jul_19_15_47_34_2020_4.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 2.5 MB       "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading chunk 6 of 31 (10 files, size = 2.524145 MB) as Sun_Jul_19_15_47_34_2020_5.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 2.5 MB       "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading chunk 7 of 31 (10 files, size = 2.537913 MB) as Sun_Jul_19_15_47_34_2020_6.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 2.5 MB       "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading chunk 8 of 31 (10 files, size = 2.51407 MB) as Sun_Jul_19_15_47_34_2020_7.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 2.5 MB       "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading chunk 9 of 31 (10 files, size = 2.522695 MB) as Sun_Jul_19_15_47_34_2020_8.tar.gz\n"
+      "Downloading chunk 4 of 31 (10 files, size = 2.518157 MB) as Tue_Jul_21_11_54_02_2020_3.tar.gz\n"
      ]
     },
     {
@@ -419,7 +349,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 10 of 31 (10 files, size = 2.529265 MB) as Sun_Jul_19_15_47_34_2020_9.tar.gz\n"
+      "Downloading chunk 5 of 31 (10 files, size = 2.511126 MB) as Tue_Jul_21_11_54_02_2020_4.tar.gz\n"
      ]
     },
     {
@@ -433,7 +363,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 11 of 31 (10 files, size = 2.527341 MB) as Sun_Jul_19_15_47_34_2020_10.tar.gz\n"
+      "Downloading chunk 6 of 31 (10 files, size = 2.524145 MB) as Tue_Jul_21_11_54_02_2020_5.tar.gz\n"
      ]
     },
     {
@@ -447,7 +377,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 12 of 31 (10 files, size = 2.520964 MB) as Sun_Jul_19_15_47_34_2020_11.tar.gz\n"
+      "Downloading chunk 7 of 31 (10 files, size = 2.537913 MB) as Tue_Jul_21_11_54_02_2020_6.tar.gz\n"
      ]
     },
     {
@@ -461,7 +391,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 13 of 31 (10 files, size = 2.525687 MB) as Sun_Jul_19_15_47_34_2020_12.tar.gz\n"
+      "Downloading chunk 8 of 31 (10 files, size = 2.51407 MB) as Tue_Jul_21_11_54_02_2020_7.tar.gz\n"
      ]
     },
     {
@@ -475,7 +405,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 14 of 31 (10 files, size = 2.527227 MB) as Sun_Jul_19_15_47_34_2020_13.tar.gz\n"
+      "Downloading chunk 9 of 31 (10 files, size = 2.522695 MB) as Tue_Jul_21_11_54_02_2020_8.tar.gz\n"
      ]
     },
     {
@@ -489,7 +419,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 15 of 31 (10 files, size = 2.516641 MB) as Sun_Jul_19_15_47_34_2020_14.tar.gz\n"
+      "Downloading chunk 10 of 31 (10 files, size = 2.529265 MB) as Tue_Jul_21_11_54_02_2020_9.tar.gz\n"
      ]
     },
     {
@@ -503,21 +433,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 16 of 31 (10 files, size = 2.527569 MB) as Sun_Jul_19_15_47_34_2020_15.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 2.5 MB       "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading chunk 17 of 31 (10 files, size = 2.516499 MB) as Sun_Jul_19_15_47_34_2020_16.tar.gz\n"
+      "Downloading chunk 11 of 31 (10 files, size = 2.527341 MB) as Tue_Jul_21_11_54_02_2020_10.tar.gz\n"
      ]
     },
     {
@@ -531,7 +447,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 18 of 31 (10 files, size = 2.525649 MB) as Sun_Jul_19_15_47_34_2020_17.tar.gz\n"
+      "Downloading chunk 12 of 31 (10 files, size = 2.520964 MB) as Tue_Jul_21_11_54_02_2020_11.tar.gz\n"
      ]
     },
     {
@@ -545,7 +461,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 19 of 31 (10 files, size = 2.528622 MB) as Sun_Jul_19_15_47_34_2020_18.tar.gz\n"
+      "Downloading chunk 13 of 31 (10 files, size = 2.525687 MB) as Tue_Jul_21_11_54_02_2020_12.tar.gz\n"
      ]
     },
     {
@@ -559,7 +475,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 20 of 31 (10 files, size = 2.526459 MB) as Sun_Jul_19_15_47_34_2020_19.tar.gz\n"
+      "Downloading chunk 14 of 31 (10 files, size = 2.527227 MB) as Tue_Jul_21_11_54_02_2020_13.tar.gz\n"
      ]
     },
     {
@@ -573,7 +489,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 21 of 31 (10 files, size = 2.505514 MB) as Sun_Jul_19_15_47_34_2020_20.tar.gz\n"
+      "Downloading chunk 15 of 31 (10 files, size = 2.516641 MB) as Tue_Jul_21_11_54_02_2020_14.tar.gz\n"
      ]
     },
     {
@@ -587,7 +503,91 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 22 of 31 (10 files, size = 2.557378 MB) as Sun_Jul_19_15_47_34_2020_21.tar.gz\n"
+      "Downloading chunk 16 of 31 (10 files, size = 2.527569 MB) as Tue_Jul_21_11_54_02_2020_15.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB     "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 17 of 31 (10 files, size = 2.516499 MB) as Tue_Jul_21_11_54_02_2020_16.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 18 of 31 (10 files, size = 2.525649 MB) as Tue_Jul_21_11_54_02_2020_17.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 19 of 31 (10 files, size = 2.528622 MB) as Tue_Jul_21_11_54_02_2020_18.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 20 of 31 (10 files, size = 2.526459 MB) as Tue_Jul_21_11_54_02_2020_19.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 21 of 31 (10 files, size = 2.505514 MB) as Tue_Jul_21_11_54_02_2020_20.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB     "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 22 of 31 (10 files, size = 2.557378 MB) as Tue_Jul_21_11_54_02_2020_21.tar.gz\n"
      ]
     },
     {
@@ -601,7 +601,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 23 of 31 (10 files, size = 2.530486 MB) as Sun_Jul_19_15_47_34_2020_22.tar.gz\n"
+      "Downloading chunk 23 of 31 (10 files, size = 2.530486 MB) as Tue_Jul_21_11_54_02_2020_22.tar.gz\n"
      ]
     },
     {
@@ -615,7 +615,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 24 of 31 (10 files, size = 2.520495 MB) as Sun_Jul_19_15_47_34_2020_23.tar.gz\n"
+      "Downloading chunk 24 of 31 (10 files, size = 2.520495 MB) as Tue_Jul_21_11_54_02_2020_23.tar.gz\n"
      ]
     },
     {
@@ -629,7 +629,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 25 of 31 (10 files, size = 2.511265 MB) as Sun_Jul_19_15_47_34_2020_24.tar.gz\n"
+      "Downloading chunk 25 of 31 (10 files, size = 2.511265 MB) as Tue_Jul_21_11_54_02_2020_24.tar.gz\n"
      ]
     },
     {
@@ -643,7 +643,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 26 of 31 (10 files, size = 2.516215 MB) as Sun_Jul_19_15_47_34_2020_25.tar.gz\n"
+      "Downloading chunk 26 of 31 (10 files, size = 2.516215 MB) as Tue_Jul_21_11_54_02_2020_25.tar.gz\n"
      ]
     },
     {
@@ -657,7 +657,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 27 of 31 (10 files, size = 2.531861 MB) as Sun_Jul_19_15_47_34_2020_26.tar.gz\n"
+      "Downloading chunk 27 of 31 (10 files, size = 2.531861 MB) as Tue_Jul_21_11_54_02_2020_26.tar.gz\n"
      ]
     },
     {
@@ -671,7 +671,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 28 of 31 (10 files, size = 2.529356 MB) as Sun_Jul_19_15_47_34_2020_27.tar.gz\n"
+      "Downloading chunk 28 of 31 (10 files, size = 2.529356 MB) as Tue_Jul_21_11_54_02_2020_27.tar.gz\n"
      ]
     },
     {
@@ -685,7 +685,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 29 of 31 (10 files, size = 2.514211 MB) as Sun_Jul_19_15_47_34_2020_28.tar.gz\n"
+      "Downloading chunk 29 of 31 (10 files, size = 2.514211 MB) as Tue_Jul_21_11_54_02_2020_28.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB     "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 30 of 31 (10 files, size = 2.520868 MB) as Tue_Jul_21_11_54_02_2020_29.tar.gz\n"
      ]
     },
     {
@@ -699,21 +713,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading chunk 30 of 31 (10 files, size = 2.520868 MB) as Sun_Jul_19_15_47_34_2020_29.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 2.5 MB       "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading chunk 31 of 31 (9 files, size = 2.269365 MB) as Sun_Jul_19_15_47_34_2020_30.tar.gz\n"
+      "Downloading chunk 31 of 31 (9 files, size = 2.269365 MB) as Tue_Jul_21_11_54_02_2020_30.tar.gz\n"
      ]
     },
     {
@@ -737,14 +737,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|====================================================|100%                      Completed after 28 s \n"
+      "|====================================================|100%                      Completed after 29 s \n"
      ]
     },
     {
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
    "outputs": [],
    "source": [
     "deg1_padj <- 0.05\n",
-    "deg1_l2fc <- log2(2)\n",
+    "deg1_l2fc <- log2(1.5)\n",
     "DEG1_df <- filter_DGE_res(res_genes_df, max_padj = deg1_padj, min_l2fc = deg1_l2fc)"
    ]
   },
@@ -1500,16 +1500,16 @@
     {
      "data": {
       "text/html": [
-       "3838"
+       "6637"
       ],
       "text/latex": [
-       "3838"
+       "6637"
       ],
       "text/markdown": [
-       "3838"
+       "6637"
       ],
       "text/plain": [
-       "[1] 3838"
+       "[1] 6637"
       ]
      },
      "metadata": {},
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,22 +1538,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "'DEG1_padj_0.05_l2fc_1.tsv'"
+       "'DEG1_padj_0.05_l2fc_0.584962500721156.tsv'"
       ],
       "text/latex": [
-       "'DEG1\\_padj\\_0.05\\_l2fc\\_1.tsv'"
+       "'DEG1\\_padj\\_0.05\\_l2fc\\_0.584962500721156.tsv'"
       ],
       "text/markdown": [
-       "'DEG1_padj_0.05_l2fc_1.tsv'"
+       "'DEG1_padj_0.05_l2fc_0.584962500721156.tsv'"
       ],
       "text/plain": [
-       "[1] \"DEG1_padj_0.05_l2fc_1.tsv\""
+       "[1] \"DEG1_padj_0.05_l2fc_0.584962500721156.tsv\""
       ]
      },
      "metadata": {},
@@ -1566,11 +1566,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_tsv(DEG1_df, path = paste(data_root, \"DGE_analysis\", DEG1_file, sep=\"/\"))"
+    "# write_tsv(DEG1_df, path = paste(data_root, \"DGE_analysis\", DEG1_file, sep=\"/\"))"
    ]
   },
   {
