Broke up full analysis into 2 pieces to avoid running DESeq every time.

--- a/DGE_analysis/unified_data_post_DGE_analysis.ipynb
+++ b/DGE_analysis/unified_data_post_DGE_analysis.ipynb
@@ -3,12 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -21,132 +16,24 @@
       "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
       "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n",
-      "Loading required package: S4Vectors\n",
-      "Loading required package: stats4\n",
-      "Loading required package: BiocGenerics\n",
-      "Loading required package: parallel\n",
-      "\n",
-      "Attaching package: ‘BiocGenerics’\n",
-      "\n",
-      "The following objects are masked from ‘package:parallel’:\n",
-      "\n",
-      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
-      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
-      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    combine, intersect, setdiff, union\n",
-      "\n",
-      "The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    IQR, mad, sd, var, xtabs\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    anyDuplicated, append, as.data.frame, basename, cbind, colnames,\n",
-      "    dirname, do.call, duplicated, eval, evalq, Filter, Find, get, grep,\n",
-      "    grepl, intersect, is.unsorted, lapply, Map, mapply, match, mget,\n",
-      "    order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,\n",
-      "    rbind, Reduce, rownames, sapply, setdiff, sort, table, tapply,\n",
-      "    union, unique, unsplit, which, which.max, which.min\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘S4Vectors’\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    first, rename\n",
-      "\n",
-      "The following object is masked from ‘package:tidyr’:\n",
-      "\n",
-      "    expand\n",
-      "\n",
-      "The following object is masked from ‘package:base’:\n",
-      "\n",
-      "    expand.grid\n",
-      "\n",
-      "Loading required package: IRanges\n",
-      "\n",
-      "Attaching package: ‘IRanges’\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    collapse, desc, slice\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    reduce\n",
-      "\n",
-      "Loading required package: GenomicRanges\n",
-      "Loading required package: GenomeInfoDb\n",
-      "Loading required package: SummarizedExperiment\n",
-      "Loading required package: Biobase\n",
-      "Welcome to Bioconductor\n",
-      "\n",
-      "    Vignettes contain introductory material; view with\n",
-      "    'browseVignettes()'. To cite Bioconductor, see\n",
-      "    'citation(\"Biobase\")', and for packages 'citation(\"pkgname\")'.\n",
-      "\n",
-      "Loading required package: DelayedArray\n",
-      "Loading required package: matrixStats\n",
-      "\n",
-      "Attaching package: ‘matrixStats’\n",
-      "\n",
-      "The following objects are masked from ‘package:Biobase’:\n",
-      "\n",
-      "    anyMissing, rowMedians\n",
-      "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    count\n",
-      "\n",
-      "Loading required package: BiocParallel\n",
-      "\n",
-      "Attaching package: ‘DelayedArray’\n",
-      "\n",
-      "The following objects are masked from ‘package:matrixStats’:\n",
-      "\n",
-      "    colMaxs, colMins, colRanges, rowMaxs, rowMins, rowRanges\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    simplify\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    aperm, apply, rowsum\n",
-      "\n"
+      "✖ dplyr::lag()    masks stats::lag()\n"
      ]
     }
    ],
    "source": [
-    "library(tidyverse)\n",
-    "library(DESeq2)\n",
-    "library(BiocParallel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_cores <- detectCores()\n",
-    "BiocParallel::register(MulticoreParam(n_cores))"
+    "library(tidyverse)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Constants"
+    "# Constants"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,88 +49,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run_DESeq_and_get_results <- function(dds) {\n",
-    "    #We want results without outlier removal or independent filtering since filtering should happen downstream.\n",
-    "    #See docs: https://bioconductor.org/packages/devel/bioc/vignettes/DESeq2/inst/doc/DESeq2.html#how-can-i-get-unfiltered-deseq2-results\n",
-    "    dds_seq <- DESeq(dds, minReplicatesForReplace = Inf, parallel = TRUE)\n",
-    "    res <- results(\n",
-    "        dds_seq,\n",
-    "        contrast = c(\"condition\", \"tumor\", \"healthy\"),\n",
-    "        pAdjustMethod = \"BH\",\n",
-    "        cooksCutoff=FALSE,\n",
-    "        independentFiltering=FALSE,\n",
-    "        parallel = TRUE\n",
-    "    )\n",
-    "    return(as_tibble(res, rownames = \"geneID\"))\n",
-    "}"
+    "## Co-process matrisome and unified dataset genes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read in data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  .default = col_double(),\n",
-      "  Hugo_Symbol = col_character()\n",
-      ")\n",
-      "See spec(...) for full column specifications.\n",
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  sample_name = col_character(),\n",
-      "  condition = col_character(),\n",
-      "  data_source = col_character()\n",
-      ")\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "TRUE"
-      ],
-      "text/latex": [
-       "TRUE"
-      ],
-      "text/markdown": [
-       "TRUE"
-      ],
-      "text/plain": [
-       "[1] TRUE"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "counts <- read_tsv(paste0(dset_paths[dset_idx], \"/counts.tsv\")) %>%\n",
-    "    select(-\"Entrez_Gene_Id\") %>%\n",
-    "    mutate_if(is.numeric, round, 0) %>%\n",
-    "    column_to_rownames(var = \"Hugo_Symbol\")\n",
-    "coldata <- read_tsv(paste0(dset_paths[dset_idx], \"/coldata.tsv\")) %>%\n",
-    "    column_to_rownames(var = \"sample_name\")\n",
-    "all(rownames(coldata) == colnames(counts))"
+    "## Load DESeq results"
    ]
   },
   {
@@ -252,183 +65,25 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "13"
-      ],
-      "text/latex": [
-       "13"
-      ],
-      "text/markdown": [
-       "13"
-      ],
-      "text/plain": [
-       "[1] 13"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "259"
-      ],
-      "text/latex": [
-       "259"
-      ],
-      "text/markdown": [
-       "259"
-      ],
-      "text/plain": [
-       "[1] 259"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "sum(coldata$condition == \"healthy\")\n",
-    "sum(coldata$condition == \"tumor\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## RUN DGE Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- `dds_naive`: measure the effect of `condition`\n",
-    "- `dds_informed`: measure the effect of `condition`, controlling for `data_source` (batch effect)\n",
-    "\n",
-    "See docs: https://bioconductor.org/packages/devel/bioc/vignettes/DESeq2/inst/doc/DESeq2.html#quick-start"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "converting counts to integer mode\n",
-      "Warning message in DESeqDataSet(se, design = design, ignoreRank):\n",
-      "“some variables in design formula are characters, converting to factors”converting counts to integer mode\n",
-      "Warning message in DESeqDataSet(se, design = design, ignoreRank):\n",
-      "“some variables in design formula are characters, converting to factors”"
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  geneID = col_character(),\n",
+      "  baseMean = col_double(),\n",
+      "  log2FoldChange = col_double(),\n",
+      "  lfcSE = col_double(),\n",
+      "  stat = col_double(),\n",
+      "  pvalue = col_double(),\n",
+      "  padj = col_double()\n",
+      ")\n"
      ]
     }
    ],
    "source": [
-    "dds_naive <- DESeqDataSetFromMatrix(\n",
-    "    countData = counts,\n",
-    "    colData = coldata,\n",
-    "    design = ~ condition\n",
-    ")\n",
-    "\n",
-    "dds_informed <- DESeqDataSetFromMatrix(\n",
-    "    countData = counts,\n",
-    "    colData = coldata,\n",
-    "    design = ~ data_source + condition\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "estimating size factors\n",
-      "estimating dispersions\n",
-      "gene-wise dispersion estimates: 16 workers\n",
-      "mean-dispersion relationship\n",
-      "final dispersion estimates, fitting model and testing: 16 workers\n",
-      "estimating size factors\n",
-      "estimating dispersions\n",
-      "gene-wise dispersion estimates: 16 workers\n",
-      "mean-dispersion relationship\n",
-      "final dispersion estimates, fitting model and testing: 16 workers\n"
-     ]
-    }
-   ],
-   "source": [
-    "dge_res_naive_df <- run_DESeq_and_get_results(dds_naive)\n",
-    "dge_res_informed_df <- run_DESeq_and_get_results(dds_informed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### How many significant DEGs? (p-value < 0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "11775"
-      ],
-      "text/latex": [
-       "11775"
-      ],
-      "text/markdown": [
-       "11775"
-      ],
-      "text/plain": [
-       "[1] 11775"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "4624"
-      ],
-      "text/latex": [
-       "4624"
-      ],
-      "text/markdown": [
-       "4624"
-      ],
-      "text/plain": [
-       "[1] 4624"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "sig_dge_res_naive_df <- dplyr::filter(dge_res_naive_df, padj < 0.05)\n",
-    "sig_dge_res_informed_df <- dplyr::filter(dge_res_informed_df, padj < 0.05)\n",
-    "nrow(sig_dge_res_naive_df)\n",
-    "nrow(sig_dge_res_informed_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Co-process matrisome and unified dataset genes"
+    "dge_res_informed_df <- read_tsv(paste0(analysis_dir, \"/\", dsets[dset_idx], \"_unfiltered_DESeq_results.tsv\"))\n",
+    "sig_dge_res_informed_df <- dplyr::filter(dge_res_informed_df, padj < 0.05)"
    ]
   },
   {
@@ -440,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1068,15 +723,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_tsv(dge_res_informed_df, paste0(analysis_dir, \"/\", dsets[dset_idx], \"_unfiltered_DESeq_results.tsv\"))\n",
     "write_tsv(sig_dge_matrisome_left_join_df, paste0(analysis_dir, \"/\", dsets[dset_idx], \"_stat_sig_DESeq_results_xref_matrisome.tsv\"))\n",
     "write_tsv(matrisome_sig_DEG_category_counts_df, paste0(analysis_dir, \"/\", dsets[dset_idx], \"_matrisome_stat_sig_DEG_category_counts.tsv\"))\n",
     "write_tsv(all_dge_matrisome_right_join_df, paste0(analysis_dir, \"/\", dsets[dset_idx], \"_all_matrisome_xref_unified_data.tsv\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
