Root data directory is now pulled from a text file.

--- a/DGE_analysis/unified_data_post_DGE_analysis.ipynb
+++ b/DGE_analysis/unified_data_post_DGE_analysis.ipynb
@@ -37,7 +37,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir <- \"../../../../../mnt/d/unified_TCGA_GTEx\"\n",
+    "# Read in root data directory\n",
+    "con <- file(\"../dev_paths.txt\", \"r\")\n",
+    "data_dir <- readLines(con,n=1)\n",
+    "close(con)\n",
+    "\n",
     "dsets <- c(\"unified_cervical_data\")\n",
     "dset_paths <- unlist(map(dsets, function(d) paste0(data_dir, \"/\", d)))\n",
     "analysis_dir <- paste(data_dir, \"analysis\", sep = \"/\")\n",
@@ -61,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,13 +735,6 @@
     "write_tsv(matrisome_sig_DEG_category_counts_df, paste0(analysis_dir, \"/\", dsets[dset_idx], \"_matrisome_stat_sig_DEG_category_counts.tsv\"))\n",
     "write_tsv(all_dge_matrisome_right_join_df, paste0(analysis_dir, \"/\", dsets[dset_idx], \"_all_matrisome_xref_unified_data.tsv\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
