--- a/preprocessing/unified_data_prep.ipynb
+++ b/preprocessing/unified_data_prep.ipynb
@@ -92,11 +92,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../../../../../mnt/d/unified_TCGA_GTEx\"\n",
+    "# Read in root data directory\n",
+    "with open('../dev_paths.txt') as f:\n",
+    "    data_dir = f.readline()\n",
+    "\n",
     "cvx_healthy = [\"cervixrsemcountgtex.txt.gz\", \"cescrsemcounttcga.txt.gz\"]\n",
     "cvx_tumor = [\"cescrsemcounttcgat.txt.gz\"]\n",
-    "ut_healthy = [\"uterusrsemcountgtex.txt.gz\", \"ucecrsemcounttcga.txt.gz\"]\n",
-    "ut_tumor = [\"ucecrsemcounttcgat.txt.gz\", \"ucsrsemcounttcgat.txt.gz\"]\n",
+    "# ut_healthy = [\"uterusrsemcountgtex.txt.gz\", \"ucecrsemcounttcga.txt.gz\"]\n",
+    "# ut_tumor = [\"ucecrsemcounttcgat.txt.gz\", \"ucsrsemcounttcgat.txt.gz\"]\n",
     "gene_cols = [\"Hugo_Symbol\", \"Entrez_Gene_Id\"]"
    ]
   },
@@ -107,7 +110,7 @@
    "outputs": [],
    "source": [
     "save_for_DESeq(data_dir, cvx_healthy, cvx_tumor, \"unified_cervical_data\", gene_cols, \"healthy\", \"tumor\")\n",
-    "save_for_DESeq(data_dir, ut_healthy, ut_tumor, \"unified_uterine_data\", gene_cols, \"healthy\", \"tumor\")"
+    "# save_for_DESeq(data_dir, ut_healthy, ut_tumor, \"unified_uterine_data\", gene_cols, \"healthy\", \"tumor\")"
    ]
   },
   {
