Created a utility function which loads developer directories (data, analysis, figures).

--- a/DGE_analysis/Untitled.ipynb
+++ b/DGE_analysis/Untitled.ipynb
@@ -27,51 +27,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"../../../../../mnt/d/2020_07_24_unified_TCGA_GTEx\"\n"
+      "[1] \"../../../../../mnt/d/2020_07_24_unified_TCGA_GTEx\"\n",
+      "[1] \"../../../../../mnt/d/2020_07_24_unified_TCGA_GTEx_analysis\"\n",
+      "[1] \"../../../../../mnt/d/2020_07_24_unified_TCGA_GTEx_figures\"\n"
      ]
-    }
-   ],
-   "source": [
-    "rutils::get_dev_directories(\"../dev_paths.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a <- list(\"a\", \"b\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obj <- list(name = \"a\", age = 1)\n",
-    "class(obj) <- \"Student\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
-      "text/html": [
-       "'Student'"
-      ],
-      "text/latex": [
-       "'Student'"
-      ],
-      "text/markdown": [
-       "'Student'"
-      ],
       "text/plain": [
-       "[1] \"Student\""
+       "$data_dir\n",
+       "[1] \"../../../../../mnt/d/2020_07_24_unified_TCGA_GTEx\"\n",
+       "\n",
+       "$analysis_dir\n",
+       "[1] \"../../../../../mnt/d/2020_07_24_unified_TCGA_GTEx_analysis\"\n",
+       "\n",
+       "$figures_dir\n",
+       "[1] \"../../../../../mnt/d/2020_07_24_unified_TCGA_GTEx_figures\"\n",
+       "\n",
+       "attr(,\"class\")\n",
+       "[1] \"DevDirs\""
       ]
      },
      "metadata": {},
@@ -79,7 +53,7 @@
     }
    ],
    "source": [
-    "class(obj)"
+    "rutils::get_dev_directories(\"../dev_paths.txt\")"
    ]
   }
  ],
